--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "httpx>=0.28.1",
     "matplotlib>=3.10.6",
     "pandas>=2.3.2",
+    "pylint>=3.3.8",
     "requests>=2.32.5",
     "seaborn>=0.13.2",
     "torch>=2.8.0",
