--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -19,6 +19,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install uv pylint
         uv sync
+        source .venv/bin/activate
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
