--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,9 +17,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install uv pylint
-        uv sync
-        source .venv/bin/activate
+        python -m pip install uv
+        uv install                         # install deps from manifest (if you use uv)
+        source .venv/bin/activate          # uv creates/uses .venv
+        pip install -e .                   # make project importable
+        pip install pylint || true         # ensure pylint available if not in manifest
     - name: Analysing the code with pylint
       run: |
+        source .venv/bin/activate
         pylint $(git ls-files '*.py')
