--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,10 +18,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install uv
-        uv install                         # install deps from manifest (if you use uv)
-        source .venv/bin/activate          # uv creates/uses .venv
-        pip install -e .                   # make project importable
-        pip install pylint || true         # ensure pylint available if not in manifest
+        uv sync                        # install deps from manifest (if you use uv)
+        source .venv/bin/activate      # uv creates/uses .venv
+        pip install -e .               # make project importable
+        pip install pylint || true     # ensure pylint available if not in manifest
     - name: Analysing the code with pylint
       run: |
         source .venv/bin/activate
