--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "esm>=3.2.1.post1",
     "httpx>=0.28.1",
+    "ipykernel>=6.30.1",
     "matplotlib>=3.10.6",
     "pandas>=2.3.2",
     "pylint>=3.3.8",
