--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,6 +1,13 @@
 name: Pylint
 
-on: [push]
+on:
+  push:
+    branches:
+    - main
+    - 'releases/**'
+  pull_request:
+    branches:
+    - main
 
 jobs:
   build:
