--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pylint>=3.3.8",
     "requests>=2.32.5",
     "seaborn>=0.13.2",
+    "statsmodels>=0.14.5",
     "torch>=2.8.0",
 ]
 
