--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "dotenv>=0.9.9",
     "esm>=3.2.1.post1",
     "httpx>=0.28.1",
     "ipykernel>=6.30.1",
