--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "dotenv>=0.9.9",
-    "esm>=3.2.2",
+    "esm==3.2.1",
     "httpx>=0.28.1",
     "ipykernel>=6.30.1",
     "matplotlib>=3.10.6",
