--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -35,8 +35,7 @@ jobs:
         which python
         which pylint
         pylint --version
-        python
-        from esm.sdk import client
-        exit(0)
+        echo "Testing python imports"
+        python -c "from esm.sdk import client"
         echo "Starting pylint analysis..."
         pylint $(git ls-files '*.py')
