pylint.yml workflow is driving me crazy

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -37,5 +37,7 @@ jobs:
         pylint --version
         echo "Testing python imports"
         python -c "from esm.sdk import client"
+        echo "Syncing dependencies"
+        uv sync
         echo "Starting pylint analysis..."
         pylint $(git ls-files '*.py')
