--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -40,4 +40,4 @@ jobs:
         echo "Syncing dependencies"
         uv sync
         echo "Starting pylint analysis..."
-        uv run pylint $(git ls-files '*.py')
+        uv run pylint $(git ls-files '*.py' | grep -v '^example\.py$')
