--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "esm==3.2.1",
     "httpx>=0.28.1",
     "ipykernel>=6.30.1",
+    "ipywidgets>=8.1.7",
     "matplotlib>=3.10.6",
     "pandas>=2.3.2",
     "pylint>=3.3.8",
