--- a/training/pyproject.toml
+++ b/training/pyproject.toml
@@ -7,4 +7,7 @@ requires-python = ">=3.13.7"
 dependencies = [
     "numpy>=2.3.3",
     "pandas>=2.3.3",
+    "pyyaml>=6.0.3",
+    "torch>=2.9.0",
+    "torchvision>=0.24.0",
 ]
