--- a/training/src/aasp/data_handler/config.yaml
+++ b/training/src/aasp/data_handler/config.yaml
@@ -1,1 +1,7 @@
 # Stores all relevant data paths and configuration parameters for the data handler
+file_path: "../../../data/train/combined_train_data.pkl"
+parameters:
+  val_frac: 0.15
+  test_frac: 0.0
+  seed: 0
+
