Vibecoded AASP dataset and data handler

--- a/training/src/aasp/data_handler/config.yaml
+++ b/training/src/aasp/data_handler/config.yaml
@@ -1,7 +1,7 @@
-# Stores all relevant data paths and configuration parameters for the data handler
-file_path: "../../../data/train/combined_train_data.pkl"
-parameters:
+# configs/config.yaml
+file_path: "data/train/combined_train_data.pkl"
+
+hyperparameters:
   val_frac: 0.15
   test_frac: 0.0
   seed: 0
-
