updating config to include scoresets as embed

--- a/training/src/aasp/data_handler/config.yaml
+++ b/training/src/aasp/data_handler/config.yaml
@@ -25,6 +25,8 @@ categorical_config:
   ref_long: "embedding"
   alt_long: "embedding"
   consequence: "multi_hot"
+  scoreset: "embedding"
+
 
 hyperparameters:
   train_batch_size: 32
