--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@ data/train/train_vep.pkl filter=lfs diff=lfs merge=lfs -text
 data/ensp_embeddings_map.pkl filter=lfs diff=lfs merge=lfs -text
 data/train/ensp_embeddings.pkl filter=lfs diff=lfs merge=lfs -text
 data/train/combined_train_data.pkl filter=lfs diff=lfs merge=lfs -text
+data/test/combined_test_data.pkl filter=lfs diff=lfs merge=lfs -text
