--- a/training/pyproject.toml
+++ b/training/pyproject.toml
@@ -5,9 +5,19 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13.7"
 dependencies = [
+    "ipykernel>=7.1.0",
+    "matplotlib>=3.10.7",
     "numpy>=2.3.3",
     "pandas>=2.3.3",
     "pyyaml>=6.0.3",
+    "scikit-learn>=1.7.2",
     "torch>=2.9.0",
     "torchvision>=0.24.0",
+    "tqdm>=4.67.1",
+    "xgboost>=3.1.1",
+]
+
+[dependency-groups]
+dev = [
+    "ipykernel>=7.1.0",
 ]
