--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13.7"
 dependencies = [
-    "numpy>=2.3.3",
+    "ipykernel>=7.1.0",
+    "matplotlib>=3.10.7",
+    "numpy>=2.3.4",
     "pandas>=2.3.3",
     "pyyaml>=6.0.3",
-    "torch>=2.9.0",
-    "torchvision>=0.24.0",
+    "tqdm>=4.67.1",
 ]
