--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "matplotlib>=3.10.7",
     "numpy>=2.3.4",
     "pandas>=2.3.3",
+    "pylint>=4.0.3",
     "pyyaml>=6.0.3",
     "tqdm>=4.67.1",
 ]
