--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -32,4 +32,4 @@ jobs:
       run: |
         source .venv/bin/activate
         echo "Starting pylint analysis..."
-        uv run pylint $(git ls-files '*.py' | grep -v '^example\.py$')
+        uv run pylint $(git ls-files '*.py')
