--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -26,6 +26,7 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install uv
         uv sync                        # install dependencies
+        bash setup.sh                  # install pytorch
         source .venv/bin/activate      # use virtual environment
         pip install -e .               # make project importable
     - name: Analyzing the code with pylint
