--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,6 @@ dependencies = [
     "pandas>=2.3.3",
     "pylint>=4.0.3",
     "pyyaml>=6.0.3",
+    "scikit-learn>=1.7.2",
     "tqdm>=4.67.1",
 ]
