--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -28,9 +28,12 @@ jobs:
 
       - name: Build release distributions
         run: |
-          # NOTE: put your own distribution build steps here.
           python -m pip install --upgrade pip
           python -m pip install uv
+          if: runner.os == 'Windows'
+            run: pwsh -File ./setup.ps1
+          if: runner.os != 'Windows'
+            run: bash ./setup.sh
           uv sync
           uv build
 
